--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 .bg-navbg
 {
-    background-color: darkslategrey;
+    background-color: black;
 }
 
 #header
 {
-    background: url("https://images.unsplash.com/photo-1526376043067-5af36c35cd6c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+    background: url("https://images.unsplash.com/photo-1522143688039-ad8a19d97f4f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=714&q=80");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
